--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
   <!-- Open Graph Meta Tags -->
   <meta property="og:title" content="Portfolio - Björn van der Lugt">
   <meta property="og:description" content="Welcome to my portfolio. I'm Björn van der Lugt, a Full-Stack web Developer specializing in MERN and JAMstack.">
-  <meta property="og:image" content="https://bjorn-van-der-lugt.github.io/Portfolio/images/marcus1280x720.webp">
-  <meta property="og:url" content=""> <!-- Don't forget to define this -->
+  <meta property="og:image" content="https://github.com/Bjorn-van-der-Lugt/portfolio-bj-rn-van-der-lugt/raw/main/images/marcus1280x720.webp">
+  <meta property="og:url" content="https://bjorn-van-der-lugt.github.io/Portfolio/">
   <meta property="og:type" content="website">
   <meta property="og:locale" content="en_US">
   <meta property="og:site_name" content="Portfolio - Björn van der Lugt">
